--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@ ul.task-list li input[type="checkbox"] {
 <li><p>Add additional information such as the bibliography file (and formatting of the references)</p></li>
 <li><p>Specific parameters for your report (eg: just used a subset of the data).</p></li>
 </ul>
-<p><strong>Best Practice</strong></p>
-<p>It is generally good practice to include all of your <code>library()</code> calls in a single, dedicated R chunk near the top of your document. This lets collaborators know what packages they might need to install before they start running your code.</p>
 </section>
 </section>
 <section id="what-is-reproducible-research" class="level1">
@@ -115,6 +113,7 @@ ul.task-list li input[type="checkbox"] {
 <p>First, ensure that Git is indeed installed on your computer. You can do this by trying to run <code>git --version</code> in your terminal or command prompt. If Git is installed, this command will return the version of Git you have installed.</p>
 <h2 id="install-git" class="anchored">Install Git</h2>
 <p>If Git is not installed, you’ll need to download and install it. You can download Git from <a href="https://git-scm.com">git-scm.com</a>. During the installation process, there is an option to add Git to your PATH. Make sure this option is selected.</p>
+<p>Are you getting any errors? <a href="~/training_rkvanwyck/240410_bb/240410_brown_bag.html">Setting the Path to Git Manually</a></p>
 </blockquote>
 </section>
 <section id="what-exactly-are-git-and-github" class="level3">
@@ -183,77 +182,8 @@ What should I write in my commit message?</strong></p>
 </section>
 </section>
 </section>
-<section id="add-git-to-path-manually" class="level1">
-<h1>Add Git to PATH Manually</h1>
-<p>If Git is installed but not recognized, you might need to add Git to your system’s PATH manually. The PATH is an environment variable that lists the directories the operating system should look in for executable files.</p>
-</section>
-<section id="git-installation-guide" class="level1">
-<h1>Git Installation Guide</h1>
-<section id="for-windows" class="level2">
-<h2 class="anchored" data-anchor-id="for-windows">For Windows</h2>
-<section id="verify-git-installation" class="level3">
-<h3 class="anchored" data-anchor-id="verify-git-installation">Verify Git Installation</h3>
-<p>Make sure Git is installed on your computer. You can download it from <a href="https://git-scm.com">git-scm.com</a>.</p>
-</section>
-<section id="locate-git-installation-path" class="level3">
-<h3 class="anchored" data-anchor-id="locate-git-installation-path">Locate Git Installation Path</h3>
-<p>Find where Git is installed. The default path is usually <code>C:\\Program Files\\Git</code>.</p>
-</section>
-<section id="edit-system-path" class="level3">
-<h3 class="anchored" data-anchor-id="edit-system-path">Edit System PATH</h3>
-<ul>
-<li>Open the Start Search, type in “env”, and choose “Edit the system environment variables”.</li>
-<li>In the System Properties window, click on the “Environment Variables…” button.</li>
-<li>In the Environment Variables window, under “System variables”, find and select the “Path” variable, then click “Edit”.</li>
-<li>In the Edit Environment Variable window, click “New” and add the Git installation path followed by <code>\\bin</code>. For example, <code>C:\\Program Files\\Git\\bin</code>.</li>
-<li>Click “OK” to close all windows and apply the changes.</li>
-</ul>
-</section>
-<section id="restart-your-computer" class="level3">
-<h3 class="anchored" data-anchor-id="restart-your-computer">Restart Your Computer</h3>
-<p>For the changes to take effect, you might need to restart your computer.</p>
-</section>
-</section>
-<section id="for-macoslinux" class="level2">
-<h2 class="anchored" data-anchor-id="for-macoslinux">For macOS/Linux</h2>
-<section id="check-git-installation" class="level3">
-<h3 class="anchored" data-anchor-id="check-git-installation">Check Git Installation</h3>
-<p>Typically, Git is already installed on macOS and most Linux distributions. You can verify this by running <code>git --version</code> in the terminal.</p>
-</section>
-<section id="update-path-if-necessary" class="level3">
-<h3 class="anchored" data-anchor-id="update-path-if-necessary">Update PATH if Necessary</h3>
-<ul>
-<li>Open your terminal.</li>
-<li>Edit your shell profile file (like <code>.bash_profile</code>, <code>.bashrc</code>, or <code>.zshrc</code>) using a text editor (e.g., <code>nano ~/.bash_profile</code>).</li>
-<li>Add a line like <code>export PATH="/usr/local/bin:$PATH"</code> (adjust the path if Git is installed in a different location).</li>
-<li>Save the file and run <code>source ~/.bash_profile</code> to apply the changes.</li>
-</ul>
-</section>
-<section id="verify-the-change" class="level3">
-<h3 class="anchored" data-anchor-id="verify-the-change">Verify the Change</h3>
-<p>Reopen the terminal and type <code>git --version</code> to check if Git is now recognized.</p>
-</section>
-</section>
-<section id="restart-terminal" class="level2">
-<h2 class="anchored" data-anchor-id="restart-terminal">Restart Terminal</h2>
-<p>After installing Git or modifying the PATH, you may need to restart your terminal or command prompt for the changes to take effect.</p>
-</section>
-<section id="using-git" class="level2">
-<h2 class="anchored" data-anchor-id="using-git">Using Git</h2>
-<p>Once Git is properly installed and recognized by your system, you should be able to run the <code>git config --global user.name "rvanwyck"</code> command without any issues. This command sets your username in the global Git configuration, which is used to identify you in your commits.</p>
-<section id="make-sure-that-your-working-directory-is-set-in-rstudio" class="level3">
-<h3 class="anchored" data-anchor-id="make-sure-that-your-working-directory-is-set-in-rstudio">Make sure that your working directory is set in RStudio</h3>
-<pre class="{r} getwd()  ## If the result is not what you want reset your working directory ## setwd(&quot;X:/YOUR PREFERED WORKING DIRECTORY&quot;)}"><code></code></pre>
-<p>If you’re encountering an error when using <strong>‘usethis::create_package()’</strong> in RStudioX, it could be due to several reasons. The <strong>‘create_package()’</strong> function from the usethis package is designed to set up a new R package structure for you.</p>
-<p><strong>Package Installation:</strong> Ensure that the <strong>‘usethis’</strong> package is correctly installed. If not, you can install it using:</p>
-<p><code>zcy ## install.packages("usethis")}</code></p>
-<p>To configure your global options in Git, especially within the context of R package development, you can use the <strong>‘usethis’</strong> package. The <strong>‘usethis’</strong> package allows you to set personal defaults for various settings. For example, you can specify defaults for your role as a package maintainer or for your preferred license in the <strong>‘.Rprofile’</strong> file.</p>
-<p><code>zcy options(   usethis.description = list(     `Authors@R` = 'person("Jane", "Doe", email = "jane@example.com")'   ) )}</code></p>
-</section>
-</section>
-</section>
-<section id="set-up-global-options-in-git" class="level1">
-<h1>Set Up Global Options in Git</h1>
+<section id="enough-of-the-explanations-set-up-global-options-in-git" class="level1">
+<h1>Enough of the explanations: Set Up Global Options in Git</h1>
 <p>Before using Git, you need to tell it who you are, also known as setting the global options. To do this, we will be setting the global options in the Terminal.</p>
 <section id="whats-the-terminal" class="level2">
 <h2 class="anchored" data-anchor-id="whats-the-terminal">What’s the Terminal?</h2>
@@ -271,10 +201,10 @@ What should I write in my commit message?</strong></p>
 <section id="configuring-git" class="level2">
 <h2 class="anchored" data-anchor-id="configuring-git">Configuring Git</h2>
 <p>Let’s start by adding your user name to the global options. Type the following into the command prompt, with your exact GitHub username, and press enter:</p>
-<p><code>zcy ## git config --global user.name "my_user_name"}</code></p>
+<p><code>yfr ## git config --global user.name "my_user_name"}</code></p>
 <p>Note that if the code ran successfully, it will look like nothing happened. We will check at the end to make sure it worked.</p>
 <p>Next, enter the following line, with the email address you used when you created your account on <a href="www.github.com">github.com</a>:</p>
-<p><code>zcy ## git config --global user.email "my_email@alaska.edu"}</code></p>
+<p><code>yfr ## git config --global user.email "my_email@alaska.edu"}</code></p>
 </section>
 </section>
 <section id="setting-up-git-credentials" class="level1">
@@ -283,9 +213,9 @@ What should I write in my commit message?</strong></p>
 <section id="when-setting-up-git-and-github-on-your-personal-computer" class="level2">
 <h2 class="anchored" data-anchor-id="when-setting-up-git-and-github-on-your-personal-computer">When Setting up Git and GitHub on Your Personal Computer</h2>
 <p>You will not need to run the <code>git config</code> line below to set the cache. This is a specific configuration for the RStudio Server we are working on.</p>
-<p><code>zcy ## git config --global credential.helper 'cache --timeout=10000000'}</code></p>
+<p><code>yfr ## git config --global credential.helper 'cache --timeout=10000000'}</code></p>
 <p>Next, we will set the default branch name to <code>main</code> for any new repositories that are created moving forward. Why are we doing this? Previously, the default branch name was <code>master</code> and this racist terminology for Git branches motivates us to update our default branch to <code>main</code> instead.</p>
-<p><code>zcy ## git config --global init.defaultBranch main}</code></p>
+<p><code>yfr ## git config --global init.defaultBranch main}</code></p>
 <p>Finally, check to make sure everything looks correct by entering this command, which will return the global options you have set.</p>
 <pre class="{r} ## git config --global --list}"><code></code></pre>
 </section>
