--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@ ul.task-list li input[type="checkbox"] {
 <blockquote class="blockquote">
 <p>The information in this presentation was shamelessly taken from the February, 2024 materials from the Arctic Data Center training; <a href="https://learning.nceas.ucsb.edu/2024-02-arctic/">Reproducible Approaches to Arctic Research Using R</a></p>
 <ul>
-<li>Jeanette Clark, Angie Garcia, Matthew B. Jones, Justin Kadi, Maggie Klope, Camila Vargas Poulsen (2024), Reproducible Approaches to Arctic Research Using R. Arctic Data Center &amp; NCEAS Learning Hub. URL&nbsp;<a href="https://learning.nceas.ucsb.edu/2024-02-arctic" class="uri">https://learning.nceas.ucsb.edu/2024-02-arctic</a>.</li>
+<li>Jeanette Clark, Angie Garcia, Matthew B. Jones, Justin Kadi, Maggie Klope, Camila Vargas Poulsen (2024), Reproducible Approaches to Arctic Research Using R. Arctic Data Center. URL&nbsp;<a href="https://learning.nceas.ucsb.edu/2024-02-arctic" class="uri">https://learning.nceas.ucsb.edu/2024-02-arctic</a>.</li>
+</ul>
+<p>You may also find these materials helpful for your work:</p>
+<ul>
+<li><p>Angie Garcia, Matthew B. Jones, Justin Kadi, Maggie Klope, Camila Vargas Poulsen (2024), Fundamentals in Data Management for Qualitative and Quantitative Arctic Research. Arctic Data Center. URL&nbsp;<a href="https://learning.nceas.ucsb.edu/2024-01-arctic" class="uri">https://learning.nceas.ucsb.edu/2024-01-arctic</a>.</p></li>
+<li><p>S. Jeanette Clark, Matthew B. Jones, Samantha Csik, Carmen Galaz García, Bryce Mecum, Natasha Haycock-Chavez, Daphne Virlar-Knight, Juliet Cohen, Anna Liljedahl. 2023. Scalable and Computationally Reproducible Approaches to Arctic Research. Arctic Data Center.&nbsp;<a href="https://doi.org/10.18739/A2QF8JM2V">doi:10.18739/A2QF8JM2V</a></p></li>
 </ul>
 </blockquote>
 <hr>
@@ -155,10 +160,13 @@ ul.task-list li input[type="checkbox"] {
 <li><p>Methods, dataflow, and dependencies</p></li>
 </ul>
 <p>When we put these all together with formal documentation, we create a <strong>computational workflow</strong> that captures all of the steps from initial data cleaning and integration, through analysis, modeling, and visualization. In other words, <strong>computational provenance is a formalized description of a workflow from the origin of the data to it’s final outcome</strong>.</p>
-<p>Here’s an example of a computational workflow from Mark Carls: <a href="https://search.dataone.org/view/urn%3Auuid%3A3249ada0-afe3-4dd6-875e-0f7928a4c171">Mark Carls. Analysis of hydrocarbons following the Exxon Valdez oil spill, Gulf of Alaska, 1989 - 2014. Gulf of Alaska Data Portal. urn:uuid:3249ada0-afe3-4dd6-875e-0f7928a4c171.</a>, that represents a three step workflow comprising four source data files and two output visualizations.</p>
+</section>
+</section>
+<section id="now-lets-dive-into-git-and-github" class="level1">
+<h1>NOW Let’s dive into Git and GitHub:</h1>
 <hr>
 <blockquote class="blockquote">
-<h2 id="check-if-git-is-installed" class="anchored">Check if Git is Installed</h2>
+<h2 id="check-if-git-is-installed" class="anchored" data-anchor-id="now-lets-dive-into-git-and-github">Check if Git is Installed</h2>
 <p>First, ensure that Git is indeed installed on your computer. You can do this by trying to run <code>git --version</code> in your terminal or command prompt. If Git is installed, this command will return the version of Git you have installed.</p>
 <h2 id="install-git" class="anchored">Install Git</h2>
 <p>If Git is not installed, you’ll need to download and install it. You can download Git from <a href="https://git-scm.com">git-scm.com</a>. During the installation process, there is an option to add Git to your PATH. Make sure this option is selected.</p>
@@ -229,7 +237,6 @@ What should I write in my commit message?</strong></p>
 </ol>
 </blockquote>
 <hr>
-</section>
 </section>
 </section>
 </section>
