--- a/index.html
+++ b/index.html
@@ -628,8 +628,8 @@ When working on projects with a small team or single developer with direct write
 <li><p>You can read the <code>renv.lock</code> file using <code>renv::restore()</code>, when needed. This will install the versions of the packages needed.</p></li>
 </ul>
 </section>
-<section id="conserve-your-computational-environement-with-docker" class="level2">
-<h2 class="anchored" data-anchor-id="conserve-your-computational-environement-with-docker"><strong>Conserve your computational environement with Docker</strong></h2>
+<section id="conserve-your-computational-environment-with-docker" class="level2">
+<h2 class="anchored" data-anchor-id="conserve-your-computational-environment-with-docker"><strong>Conserve your computational environment with Docker</strong></h2>
 <ul>
 <li><p>The <code>rrtools</code> package then uses this <code>renv.lock</code> file to build what is called a Dockerfile.</p></li>
 <li><p><a href="http://www.docker.com/"><strong>Docker</strong></a> <strong>allows you to build containers, a standard unit of software that packages up code and all its dependencies so an application runs quickly and reliably from one computing environment to another.</strong></p></li>
