--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@ What should I write in my commit message?</strong></p>
 </section>
 </section>
 </section>
-<section id="collaborating-with-a-trusted-colleagues-without-conflicts" class="level1">
-<h1><strong>Collaborating with a trusted colleagues without conflicts</strong></h1>
+<section id="collaborating-with-trusted-colleagues-without-conflicts" class="level1">
+<h1><strong>Collaborating with trusted colleagues without conflicts</strong></h1>
 <p>We start our collaboration by giving a trusted colleague access to our repository on GitHub. In this example, we define the <strong>Owner as the individual who owns the repository</strong>, and the <strong>Collaborator as the person whom the Owner chooses to give permission to make changes to their repository</strong>.</p>
 <p>The Collaborator will make changes to the repository and then <code>push</code> those changes to the shared repository on GitHub. The Owner will then use <code>pull</code> to retrieve the changes without encountering any conflicts. <em>This is the most ideal workflow.</em></p>
 <p>The instructors will demonstrate this process in the next section.</p>
